# tiger

./: .gitignore  .merlin  Makefile  README.md  TODO.adoc  TODO.md  _tags  dune-project  jbuild  location.ml  simple_type.ml  simple_type.mli  syntax.ml  tiger.opam  tigercc.ml
.github/workflows/: build_and_test.yml
simple_type/: simple_type_test.ml
src/: arm32frame.ml  dune  env.ml  env.mli  error.ml  errors.ml  findescape.ml  findescape.mli  frame.mli  jbuild  lexer.mll  location.ml  parser.mly  semant.ml  semant.mli  stdlib.ml  stdlib.mli  symbol.ml  symbol.mli  syntax.ml  temp.ml  temp.mli  tig_syntax.ml  tigercc.ml  translate.ml  translate.mli  tree.ml  tree.mli  tstdlib.ml  tstdlib.mli  types.ml  types.mli
tests/: dune  merge.tig  runtest.ml  test.ml
tests/bad/: assign0.tig  assign1.tig  break.tig  comp_unit.tig  dupfield0.tig  dupfield1.tig  first_order.tig  ifthenelse0.tig  mutual0.tig  shadowing0.tig  typcheck0.tig  typcheck1.tig  typcheck2.tig  typcheck3.tig  typcheck4.tig  typcheck5.tig
tests/good/: assign0.tig  escapes.tig  merge.tig  mutual.tig  queens.tig  typcheck0.tig
